Added team section

--- a/index.html
+++ b/index.html
@@ -93,6 +93,51 @@
                 </svg>     </a>            
             </div>
         </section>
+        <section class="team">
+            <h2 class="team__heading">Команда</h2>
+            <div class="team__members">
+                <div class="team__members__card">
+                    <img class="team__members__card__photo" src="img/team-1.jpg" alt="team-1">
+                    <p class="team__members__card__text">Это Маша, наш главный дизайнер. Она отвечает за дизайн-проект, приезжает к вам домой, общается
+                        и помогает сделать вашу квартиру красивой и уютной.</p>
+                </div>
+                <div class="team__members__card">
+                    <img class="team__members__card__photo" src="img/team-2.jpg" alt="team-2">
+                    <p class="team__members__card__text">С нашим менеджером Сашей вы познакомитесь в первую очередь. Она проконсультирует вас, соберёт все документы
+                        и ответит на все вопросы.</p>
+                </div>
+                <div class="team__members__card">
+                    <img class="team__members__card__photo" src="img/team-3.jpg" alt="team-3">
+                    <p class="team__members__card__text">Катя тоже занимается дизайном.
+                        Она всегда находит общий язык
+                        с клиентами и точно знает,
+                        как обсутроить дом так, чтобы вам понравилось.</p>
+                </div>
+            </div>
+            <h2 class="team__heading">Как мы работаем</h2>
+            <div class="team__how">
+                <div class="team__how__card">
+                    <p class="team__how__card__number">1</p>
+                    <p class="team__how__card__text">Знакомимся, выезжаем
+                        на объект, утверждаем концепцию, подписывем договор.</p>
+                </div>
+                <div class="team__how__card">
+                    <p class="team__how__card__number">2</p>
+                    <p class="team__how__card__text">Подбираем мебель, текстиль, аксессуры. Делаем 3D-
+                        зуализацию.</p>
+                </div>
+                <div class="team__how__card">
+                    <p class="team__how__card__number">3</p>
+                    <p class="team__how__card__text">Находим нужные магазины, помогаем с доставкой
+                        и оплатой товаров.</p>
+                </div>
+                <div class="team__how__card">
+                    <p class="team__how__card__number">4</p>
+                    <p class="team__how__card__text">Воплощаем проект в жизнь:
+                        расставляем мебель и цветы, вешаем шторы, находим места для мелочей</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
